# postings

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
benches/: query.rs  raw_file_single_large.rs  raw_file_topk.rs
crates/posings/: Cargo.toml  README.md
crates/posings/src/: lib.rs
crates/postings-codec/: Cargo.toml  README.md
crates/postings-codec/src/: ef.rs  lib.rs  varint.rs
docs/: raw-segments.md
docs/design/: raw-segment-reader.md
examples/: durable_roundtrip.rs  raw_segment_file.rs  splade_weighted.rs
src/: lib.rs  positional.rs  raw.rs
src/codec/: ef.rs  mod.rs  varint.rs
src/positional/: raw.rs
tests/: durability_roundtrip.rs  near_parity.rs
tests/fixtures/: raw_v3_flags0.segment
