[package]
name = "postings"
version = "0.2.1"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Inverted-index postings lists with segment-style updates. Supports u32 TF (classical) and f32 weights (SPLADE/learned sparse)."
repository = "https://github.com/arclabs561/postings"
homepage = "https://github.com/arclabs561/postings"
documentation = "https://github.com/arclabs561/postings#readme"
publish = true
readme = "README.md"
keywords = ["search", "postings", "inverted-index", "search"]
categories = ["text-processing", "algorithms"]

[workspace]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
durability = { version = "0.6", optional = true }
postcard = { version = "1.0", optional = true }
sbits = { version = "0.2", optional = true }
cnk = { version = "0.2.0", optional = true }

[features]
default = []
serde = ["dep:serde"]
persistence = ["dep:durability", "dep:postcard", "serde"]
sbits = ["dep:sbits"]
positional = []
cnk-compression = ["dep:cnk", "positional"]
raw-segment = []

[dev-dependencies]
proptest = "1.9"
durability = "0.6"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "near_parity"
required-features = ["positional"]

[[bench]]
name = "query"
harness = false
