[package]
name = "postings"
version = "0.4.2"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Inverted-index postings lists and codecs."
repository = "https://github.com/arclabs561/postings"
homepage = "https://github.com/arclabs561/postings"
documentation = "https://github.com/arclabs561/postings#readme"
publish = true
readme = "README.md"
keywords = ["search", "postings", "inverted-index", "codec"]
categories = ["text-processing", "algorithms"]

[workspace]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
durability = { version = "0.7.2", optional = true }
postcard = { version = "1.0", optional = true }
sbits = { version = "0.2", optional = true }
cnk = { version = "0.2.0", optional = true }
crc32fast = { version = "1.4", optional = true }

[features]
default = []
serde = ["dep:serde"]
persistence = ["dep:durability", "dep:postcard", "serde"]
sbits = ["dep:sbits"]
positional = []
cnk-compression = ["dep:cnk", "positional"]
raw-segment = ["dep:crc32fast"]

[dev-dependencies]
proptest = "1.9"
durability = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "near_parity"
required-features = ["positional"]

[[bench]]
name = "query"
harness = false

[[bench]]
name = "raw_file_topk"
harness = false
required-features = ["raw-segment"]

[[bench]]
name = "raw_file_single_large"
harness = false
required-features = ["raw-segment"]

[[example]]
name = "raw_segment_file"
required-features = ["raw-segment"]
