[package]
name = "postings-codec"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Encoding/decoding primitives for postings lists (varint/gap), plus iterator contracts."
repository = "https://github.com/arclabs561/postings"
homepage = "https://github.com/arclabs561/postings"
documentation = "https://docs.rs/postings-codec"
publish = true

[dependencies]
thiserror = "2.0"
sbits = { version = "0.1.0", optional = true }

[features]
default = []
## Enable succinct monotone sequences (Elias-Fano) via `sbits`.
sbits = ["dep:sbits"]

[dev-dependencies]
proptest = "1.9"

